feat: Integrate AI-driven captioning and debugging features
- Added DebugContext and DebugPanel for real-time debugging information.
- Implemented AI decision-making for captions using OpenRouter API.
- Enhanced DraggableCaptions and LiveCaptions components to utilize AI responses.
- Introduced theme toggling functionality in TopToolbar.
- Updated VideoCanvas to include audio constraints for better recording quality.
- Refactored styles and added CSS variables for light and dark themes.
- Improved speech recognition handling with Vosk integration.
- Added new types for AI decisions in captioning.
- Updated Index page to include DebugPanel for development purposes.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CaptionCam - Video Recording with Live Captions</title>
+    <title>gaki がき/ガキ - Video Recording with Live Captions</title>
     <meta name="description" content="Record videos with real-time captions, customize styles, and share professional content" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
